<resources>
    <string name="app_name">To-Do List App</string>
    <string name="add_task">add task</string>
    <string name="nama_task">Nama Task</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="all_task">All Task</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_picker">Date Picker</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="sudah_punya_akun">sudah punya akun?</string>
    <string name="logout">logout</string>
</resources>