<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="32dp"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:id="@+id/tvIdTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvIdUserTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/nama_task"/>

    <EditText
        android:id="@+id/etNameTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/due_date"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            tools:ignore="TextFields" />

        <ImageButton
            android:id="@+id/btnPickDate"
            android:layout_gravity="right"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:contentDescription="@string/date_picker"
            android:src="@drawable/ic_baseline_calendar_today_24"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnCancelTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>