<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/cbTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:shadowColor="@color/black" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamatask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_task"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/due_date"
            android:textColor="@color/black" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>